main page has links

--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-LOL
+
+
+<html>
+
+	<head>
+		<meta name="author" content="Sampo Pelto">
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<title>sampozki</title>
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="styles.css">
+		<link rel="stylesheet" type="text/css" href="csshake.min.css">
+
+	</head>
+
+	<body>
+		<div class="header">
+			<h3 class="shake shake-constant">sampozki.github.io</h3>
+		<div class="content">
+			<a href="pointti/index.html">Pointti</a><br>
+			<a href="mtg/index.html">MTG health counter</a><br>
+			<a href="dice/index.html">dice</a><br>
+			<a href="smoothie/index.html">randomized smoothie maker</a><br>
+			<a href="kuna/index.html">kuna to euro converter</a><br>
+			<a href="bpm/index.html">bpm counter</a><br>
+		</div>
+<script>
+var bgcolor = ["#A5DA91","#FFCAAA","#BF7FAD","F1A0AD"];
+
+document.documentElement.style.setProperty("--bgcolor", bgcolor[Math.floor(Math.random() * bgcolor.length)]);
+document.documentElement.style.setProperty("--randomcolor", bgcolor[Math.floor(Math.random() * bgcolor.length)]);
+
+
+</script>
+	</body>
+
+</html>
