--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<a href="pointti/index.html">Pointti</a><br>
 			<a href="mtg/index.html">MTG health counter</a><br>
 			<a href="dice/index.html">dice</a><br>
-			<a href="smoothie/index.html">randomized smoothie maker</a><br>
+			<a href="Smoothie/index.html">randomized smoothie maker</a><br>
 			<a href="kuna/index.html">kuna to euro converter</a><br>
 			<a href="bpm/index.html">bpm counter</a><br>
 		</div>
