--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 			<a href="Smoothie/index.html">randomized smoothie maker</a><br>
 			<a href="kuna/index.html">kuna to euro converter</a><br>
 			<a href="bpm/index.html">bpm counter</a><br>
+			
 		</div>
+		<img src="logo.png" id="logo">
 <script>
 var bgcolor = ["#A5DA91","#FFCAAA","#BF7FAD","F1A0AD"];
 
