Removed texts before page load

--- a/xkcd/index.html
+++ b/xkcd/index.html
@@ -13,10 +13,10 @@
     <body>
         <div class="content">
             <button id="random">Random XKCD</button>
-            <h1 id="otsikko">Otsikko</h1>
+            <h1 id="otsikko"></h1>
             <img id="image" src="">
-            <p id="alt">alt</p>
-            <p id="num">num</p>
+            <p id="alt"></p>
+            <p id="num"></p>
         </div>
 
         <noscript>You're gonna need to enable scripts ;_;</noscript>
