--- a/xkcd/index.html
+++ b/xkcd/index.html
@@ -3,7 +3,7 @@
         <title>XKCD viewer</title>
         <meta name="author" content="Sampo Pelto">
         <meta charset="UTF-8">
-        <meta keywords="xkcd">
+        <meta keywords="XKCD">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
