Added prev and next buttons

--- a/xkcd/index.html
+++ b/xkcd/index.html
@@ -13,7 +13,9 @@
 
     <body>
         <div class="content">
+            <button id="prev">Prev</button>
             <button id="random">Random XKCD</button>
+            <button id="next">Next</button>
             <h1 id="otsikko"></h1>
             <img id="image" src="">
             <p id="alt"></p>
