--- a/xkcd/index.html
+++ b/xkcd/index.html
@@ -5,6 +5,8 @@
         <meta charset="UTF-8">
         <meta keywords="XKCD">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+        <link rel="shortcut icon" href="919f27.ico" type="image/x-icon"/>
+        <link rel="icon" href="919f27.ico" type="image/x-icon"/>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="style.css">
